force-app/main/default/objects/Bottoms_Up__c/Bottoms_Up__c.object-meta.xml
<CustomObject>
    <description>Quota object</description>
    <label>Bottoms Up</label>
    <nameField>
        <label>Bottoms Up Name</label>
        
        <type>Text</type>
    </nameField>
    <pluralLabel>Bottoms Up</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>