force-app/main/default/objects/Bottoms_Up__c/fields/BK_HWM__c.field-meta.xml
<CustomField>
    <fullName>BK_HWM__c</fullName>
    <label>BK HWM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>