force-app/main/default/objects/Bottoms_Up__c/fields/BK_Managed_Services_TCV__c.field-meta.xml
<CustomField>
    <fullName>BK_Managed_Services_TCV__c</fullName>
    <label>BK Managed Services TCV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>