force-app/main/default/objects/Bottoms_Up__c/fields/BK_Total_Solution_Orders__c.field-meta.xml
<CustomField>
    <fullName>BK_Total_Solution_Orders__c</fullName>
    <formula>BK_HW__c  +  BK_SW__c  +  BK_PS__c  +  BK_TS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BK Total Solution Orders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>