force-app/main/default/objects/Bottoms_Up__c/fields/BK_Total_TCV_Orders__c.field-meta.xml
<CustomField>
    <fullName>BK_Total_TCV_Orders__c</fullName>
    <formula>BK_HW_TCV__c  +  BK_SW_TCV__c  +  BK_PS_TCV__c  +  BK_Cloud_TCV__c  +  BK_Managed_Services_TCV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BK Total TCV Orders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>