force-app/main/default/objects/Bottoms_Up__c/fields/BK_TS__c.field-meta.xml
<CustomField>
    <fullName>BK_TS__c</fullName>
    <label>BK TS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>