force-app/main/default/objects/Bottoms_Up__c/fields/Cloud_Rev__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Rev__c</fullName>
    <label>Cloud Rev</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>