force-app/main/default/objects/Bottoms_Up__c/fields/HWaaS_TCV__c.field-meta.xml
<CustomField>
    <fullName>HWaaS_TCV__c</fullName>
    <label>HWaaS TCV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>