force-app/main/default/objects/Bottoms_Up__c/fields/New_Solution_Revenue__c.field-meta.xml
<CustomField>
    <fullName>New_Solution_Revenue__c</fullName>
    <label>New Solution Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>