force-app/main/default/objects/Bottoms_Up__c/fields/Payments_ACV__c.field-meta.xml
<CustomField>
    <fullName>Payments_ACV__c</fullName>
    <inlineHelpText>ACV Value of Payment solution recurring orders (WEPTS, Connected Payments, NCR Payment Processing (US)).</inlineHelpText>
    <label>Payments ACV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>