force-app/main/default/objects/Bottoms_Up__c/fields/Payments_TCV__c.field-meta.xml
<CustomField>
    <fullName>Payments_TCV__c</fullName>
    <inlineHelpText>TCV Value of Payment solution recurring orders (WEPTS, Connected Payments, NCR Payment Processing (US)).</inlineHelpText>
    <label>Payments TCV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>