force-app/main/default/objects/Bottoms_Up__c/fields/POS_HW_Orders__c.field-meta.xml
<CustomField>
    <fullName>POS_HW_Orders__c</fullName>
    <inlineHelpText>Whole Dollar value of all other HW Orders; peripherals, scanners, scales, servers, HH devices, kit, etc… not related to a SCO purchase.</inlineHelpText>
    <label>POS HW Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>