force-app/main/default/objects/Bottoms_Up__c/fields/PS_ACV__c.field-meta.xml
<CustomField>
    <fullName>PS_ACV__c</fullName>
    <inlineHelpText>ACV (in whole dollars) value of PS subscriptions.</inlineHelpText>
    <label>PS ACV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>