force-app/main/default/objects/Bottoms_Up__c/fields/PS_Recurring__c.field-meta.xml
<CustomField>
    <fullName>PS_Recurring__c</fullName>
    <label>PS Recurring</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>