force-app/main/default/objects/Bottoms_Up__c/fields/PS_TCV__c.field-meta.xml
<CustomField>
    <fullName>PS_TCV__c</fullName>
    <inlineHelpText>TCV (in whole dollars) value of PS subscriptions.</inlineHelpText>
    <label>PS TCV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>