force-app/main/default/objects/Bottoms_Up__c/fields/Route_to_Market__c.field-meta.xml
<CustomField>
    <fullName>Route_to_Market__c</fullName>
    <label>Route to Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>