force-app/main/default/objects/Bottoms_Up__c/fields/SCOaaS_Potential__c.field-meta.xml
<CustomField>
    <fullName>SCOaaS_Potential__c</fullName>
    <label>SCOaaS Potential</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>