force-app/main/default/objects/Bottoms_Up__c/fields/Split_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Split_Ratio__c</fullName>
    <label>Split Ratio</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>