force-app/main/default/objects/Bottoms_Up__c/fields/SW_Recurring__c.field-meta.xml
<CustomField>
    <fullName>SW_Recurring__c</fullName>
    <label>SW Recurring</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>