force-app/main/default/objects/Bottoms_Up__c/fields/SW_TCV__c.field-meta.xml
<CustomField>
    <fullName>SW_TCV__c</fullName>
    <inlineHelpText>TCV (in whole dollars) value of SW Subscriptions. Should be the ACV multiplied by the assumed term length of the ACV.</inlineHelpText>
    <label>SW TCV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>