force-app/main/default/objects/Bottoms_Up__c/fields/TS_Rev__c.field-meta.xml
<CustomField>
    <fullName>TS_Rev__c</fullName>
    <label>TS Rev</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>